# caldal_backend

./: .gitignore  Dockerfile  compose.local.yaml  compose.prod.yaml  manage.py  pyproject.toml  pytest.ini  run-docker-compose.sh  run-web-server.sh
caldal/: conftest.py
caldal/config/: api_v1.py  asgi.py  urls.py  views.py  wsgi.py
caldal/config/settings/: base.py  local.py  prod.py  test.py
caldal/domain/: paths.py
caldal/domain/account/: apps.py
caldal/domain/account/business_services/: __init__.py  auth_token_service.py  oauth_service.py
caldal/domain/account/const/: enums.py  values.py
caldal/domain/account/controllers/: account.py  auth.py  auth_controller.py
caldal/domain/account/interfaces/: oauth_interface.py
caldal/domain/account/migrations/: 0002_oauthprofile.py  0003_alter_oauthprofile_user.py  0004_alter_oauthprofile_created_at.py  0005_alter_oauthprofile_provider.py
caldal/domain/account/model_services/: __init__.py  oauth_profile_model_service.py  user_model_service.py
caldal/domain/account/models/: __init__.py  oauth_profile.py  oauth_profile_model.py
caldal/domain/account/schemas/: account.py  auth.py  auth_schemas.py  user.py
caldal/domain/account/services/: auth_service.py  oauth_service.py
caldal/domain/schedule/: apps.py  filters.py
caldal/domain/schedule/consts/: values.py
caldal/domain/schedule/controllers/: __init__.py  schedule.py  (+2 more)
caldal/util/: consts.py  datetime.py  fields.py  filters.py  schemas.py  test.py
caldal/util/services/: business_service.py  model_service.py
deploy/: prod.nginx
(+45 files in other folders)
